WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189698
[css-grid] Static position should use content-box, not padding-box
https://bugs.webkit.org/show_bug.cgi?id=189698
Summary
[css-grid] Static position should use content-box, not padding-box
Manuel Rego Casasnovas
Reported
2018-09-18 06:09:01 PDT
[css-grid] Static position should use content-box, not padding-box
Attachments
Patch
(6.02 KB, patch)
2018-09-18 06:09 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.01 KB, patch)
2018-09-18 07:34 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2018-09-18 06:09:28 PDT
Created
attachment 350016
[details]
Patch
Javier Fernandez
Comment 2
2018-09-18 07:10:08 PDT
Comment on
attachment 350016
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=350016&action=review
> Source/WebCore/rendering/RenderGrid.cpp:907 > + // (
https://drafts.csswg.org/css-grid/#static-position
).
There is no need to wrap the line in this comment.
Manuel Rego Casasnovas
Comment 3
2018-09-18 07:34:23 PDT
Created
attachment 350020
[details]
Patch for landing
Manuel Rego Casasnovas
Comment 4
2018-09-18 07:35:21 PDT
Comment on
attachment 350016
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=350016&action=review
Thanks for the review.
>> Source/WebCore/rendering/RenderGrid.cpp:907 >> + // (
https://drafts.csswg.org/css-grid/#static-position
). > > There is no need to wrap the line in this comment.
Ok, fixed.
WebKit Commit Bot
Comment 5
2018-09-18 08:13:49 PDT
Comment on
attachment 350020
[details]
Patch for landing Clearing flags on attachment: 350020 Committed
r236126
: <
https://trac.webkit.org/changeset/236126
>
WebKit Commit Bot
Comment 6
2018-09-18 08:13:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-09-18 08:14:24 PDT
<
rdar://problem/44560634
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug